<resources>
    <string name="app_name">SPinder</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile_pic">Profile pic</string>
    <string name="user_name">Name</string>
    <string name="age">Age</string>
    <string name="add_travel">add travel</string>
    <string name="bio_description">Write something about yourself</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_taken">image taken</string>
    <string name="take_gps_position">take gps position</string>
    <string name="username">Username</string>
    <string name="share">Share</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="not_interested">not interested</string>
    <string name="reload">reload</string>
    <string name="interested">interested</string>
    <string name="add_person_to_first">add person to first</string>
    <string name="logo">Logo</string>
    <string name="remember_me">Remember me</string>
    <string name="signup">signup</string>
    <string name="registrationPage">registration page</string>
    <string name="confirm_email_address">Confirm email address</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="LastName">LastName</string>
    <string name="FirstName">FirstName</string>
    <string name="place">place</string>
    <string name="birthday">Birthday</string>
    <string name="error_field_required">ERROR: field required</string>
    <string name="error_invalid_password">ERROR: invalid password</string>
    <string name="error_invalid_username">ERROR: invalid username</string>
    <string name="city">City</string>
    <string name="title_activity_login_studio">LoginActivityStudio</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="messages">Messages</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="proceed">Proceed</string>
    <string name="when_pic_was_taken">When pic was taken</string>
    <string name="write_something_about_the_picture">Write something about the picture</string>
    <string name="place_name">Place name</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="date">Date</string>
    <string name="place_description">Description</string>
</resources>