<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/topbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/place_image"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]"
                android:contentDescription="@string/profile_pic"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_android_24"
                android:background="@color/purple_500"/>

            <TextView
                android:id="@+id/place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

            <TextView
                android:id="@+id/travel_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <TextView
                android:id="@+id/place_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio_description"
                android:layout_margin="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:icon="@drawable/ic_baseline_share_24"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>