<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <RelativeLayout
        android:id="@+id/button_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="70dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:clipChildren="false">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/rewind_button"
            android:layout_toStartOf="@+id/rewind_button"
            android:src="@drawable/ic_baseline_not_interested_24"
            app:backgroundTint="@android:color/white"
            app:fabSize="auto"
            app:rippleColor="#22ED7563"
            android:contentDescription="@string/not_interested" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rewind_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_baseline_rotate_right_24"
            app:backgroundTint="@android:color/white"
            app:fabSize="mini"
            app:rippleColor="#225BC9FA"
            android:contentDescription="@string/reload" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/rewind_button"
            android:layout_toEndOf="@+id/rewind_button"
            android:src="@drawable/ic_baseline_thumb_up_24"
            app:backgroundTint="@android:color/white"
            app:fabSize="auto"
            app:rippleColor="#226FE2B3"
            android:contentDescription="@string/interested" />

    </RelativeLayout>

</RelativeLayout>